omx/gstomxvideodec.c
@@ -2019,7 +2019,6 @@ gst_omx_video_dec_set_format (GstVideoDecoder * decoder,
     GST_DEBUG_OBJECT (self, "Need to disable and drain decoder");
 
     gst_omx_video_dec_drain (decoder);
-    gst_omx_video_dec_flush (decoder);
     gst_omx_port_set_flushing (out_port, 5 * GST_SECOND, TRUE);
 
     if (klass->cdata.hacks & GST_OMX_HACK_NO_COMPONENT_RECONFIGURE) {
@@ -2593,13 +2592,16 @@ release_error:
 }
 
 static GstFlowReturn
-gst_omx_video_dec_finish (GstVideoDecoder * decoder)
+gst_omx_video_dec_drain (GstVideoDecoder * decoder)
 {
-  return gst_omx_video_dec_drain (decoder);
+  gboolean ret;
+  ret = gst_omx_video_dec_finish (decoder);
+  gst_omx_video_dec_flush (decoder);
+  return ret;
 }
 
 static GstFlowReturn
-gst_omx_video_dec_drain (GstVideoDecoder * decoder)
+gst_omx_video_dec_finish (GstVideoDecoder * decoder)
 {
   GstOMXVideoDec *self;
   GstOMXVideoDecClass *klass;
